--- a/css/styles.css
+++ b/css/styles.css
@@ -13,22 +13,32 @@ body {
     text-decoration: none; }
 
 header {
-  padding: 2rem;
+  padding: 1.5rem;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between; }
+  justify-content: space-between;
+  border-bottom: 1px solid #dadada;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5000000;
+  background-color: #ffffff; }
   header svg {
-    width: 30%; }
+    width: 26%; }
   header #nav-toggle span {
-    width: 4rem;
-    height: .5rem;
+    width: 3.2rem;
+    height: .4rem;
     border-radius: 5rem;
     display: block;
     background-color: #EF1141;
-    margin-top: .5rem; }
+    margin-top: .4rem; }
     header #nav-toggle span:first-of-type {
       margin-top: 0; }
+
+main {
+  margin-top: 5rem; }
 
 #filters {
   display: flex;
@@ -39,8 +49,7 @@ header {
   width: 100%;
   overflow-x: scroll;
   padding: 2rem;
-  border-bottom: 1px solid #dadada;
-  border-top: 1px solid #dadada; }
+  border-bottom: 1px solid #dadada; }
   #filters::-webkit-scrollbar {
     display: none; }
   #filters .filter-profesion {
@@ -234,3 +243,74 @@ header {
   .search-form#modelo, .search-form#influencer, .search-form#alquiler {
     position: absolute;
     transform: translateX(150vw); }
+
+#main-search {
+  padding: 2rem; }
+  #main-search .article {
+    display: block;
+    margin-bottom: 3rem; }
+    #main-search .article:last-of-type {
+      margin-bottom: 2rem; }
+    #main-search .article .img {
+      width: 100%;
+      height: 55vw;
+      border-radius: 1rem;
+      overflow: hidden;
+      position: relative;
+      margin-bottom: 1.5rem;
+      border: 0.01rem solid rgba(167, 167, 167, 0.7); }
+      #main-search .article .img img {
+        width: 100%;
+        height: 55vw;
+        object-fit: cover; }
+    #main-search .article .data {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: rgba(255, 255, 255, 0.8);
+      padding: 1rem 1.5rem; }
+      #main-search .article .data .name {
+        font-size: 1.7rem;
+        font-weight: 500;
+        line-height: 1.4;
+        letter-spacing: 0.05rem;
+        color: #2b2b2b; }
+      #main-search .article .data .profesion {
+        font-size: 1.6rem;
+        font-weight: 500;
+        line-height: 1.4;
+        letter-spacing: 0.05rem;
+        color: #EF1141; }
+        #main-search .article .data .profesion span {
+          font-size: 1.4rem;
+          font-weight: 400;
+          line-height: 1.4;
+          letter-spacing: 0.05rem;
+          color: #4B4B4B; }
+    #main-search .article .socials {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      column-gap: 1rem;
+      row-gap: 1rem;
+      margin-bottom: 1.5rem; }
+      #main-search .article .socials .social-icon {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start; }
+        #main-search .article .socials .social-icon svg {
+          height: 2.3rem;
+          margin-right: .6rem; }
+        #main-search .article .socials .social-icon p {
+          font-size: 1.5rem;
+          font-weight: 500;
+          line-height: 1.4;
+          letter-spacing: 0.05rem;
+          color: #2b2b2b; }
+    #main-search .article .text {
+      font-size: 1.5rem;
+      font-weight: 300;
+      line-height: 1.4;
+      letter-spacing: 0.05rem;
+      color: #2b2b2b; }
